--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native-immersive": "^2.0.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
-    "react-native-spinkit": "^1.5.1"
+    "react-native-spinkit": "^1.5.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
